@@ -901,6 +901,23 @@ public abstract class JXCSkinLoader implements JXCSkin
                             final GUILabelDrawextinfo element = new GUILabelDrawextinfo(window, name, x, y, w, h, font, color);
                             elements.insert(name, element);
                         }
+                        else if (gui != null && args[0].equals("label_html"))
+                        {
+                            if (args.length < 8)
+                            {
+                                throw new IOException("syntax error");
+                            }
+
+                            final String name = args[1];
+                            final int x = parseInt(args[2]);
+                            final int y = parseInt(args[3]);
+                            final int w = parseInt(args[4]);
+                            final int h = parseInt(args[5]);
+                            final Font font = fonts.lookup(args[6]);
+                            final Color color = parseColor(args[7]);
+                            final String text = parseText(args, 8);
+                            elements.insert(name, new GUIHTMLLabel(window, name, x, y, w, h, null, font, color, text));
+                        }
                         else if (gui != null && args[0].equals("label_query"))
                         {
                             if (args.length != 8)
@@ -933,23 +950,7 @@ public abstract class JXCSkinLoader implements JXCSkin
                             final Font font = fonts.lookup(args[6]);
                             final Color color = parseColor(args[7]);
                             final String text = parseText(args, 8);
-                            elements.insert(name, new GUIHTMLLabel(window, name, x, y, w, h, null, font, color, text));
-                        }
-                        else if (gui != null && args[0].equals("label_picture"))
-                        {
-                            if (args.length != 8)
-                            {
-                                throw new IOException("syntax error");
-                            }
-
-                            final String name = args[1];
-                            final int x = parseInt(args[2]);
-                            final int y = parseInt(args[3]);
-                            final int w = parseInt(args[4]);
-                            final int h = parseInt(args[5]);
-                            final BufferedImage pictureEmpty = getPicture(args[6]);
-                            final Font font = fonts.lookup(args[7]);
-                            elements.insert(name, new GUIHTMLLabel(window, name, x, y, w, h, pictureEmpty, font, Color.WHITE, ""));
+                            elements.insert(name, new GUILabel(window, name, x, y, w, h, null, font, color, GUILabel.Alignment.LEFT, text));
                         }
                         else if (gui != null && args[0].equals("label_stat"))
                         {
